--- a/milestone_1/milestone_1.ipynb
+++ b/milestone_1/milestone_1.ipynb
@@ -5,7 +5,25 @@
    "metadata": {},
    "source": [
     "# Milestone 1\n",
-    "Building on previous exercises, build an interactive application that asks the user a serie of questions and then stores the user's answers for later analysis."
+    "Building on previous exercises, build an interactive application that asks the user a series of questions and then stores the user's answers for later analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "Your submission should include the following:\n",
+    "- A Chatbot that asks the user a series of at least five questions.\n",
+    "- Your chatbot should store the user's responses in a data structure, preferably a Pandas DataFrame, so that it can present a graphical analysis of the responses.\n",
+    "- Your chatbot should provide at least one visualization, such as a vertical bar chart, that provides a basic summary and analysis of the user input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example Code"
    ]
   },
   {
@@ -22,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Basic Chatbot"
+    "### Create a Basic Chatbot"
    ]
   },
   {
@@ -46,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize a DataFrame to Store User Input"
+    "### Initialize a DataFrame to Store User Input"
    ]
   },
   {
@@ -62,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run the Chatbot and Save Each User's Answers"
+    "### Run the Chatbot and Save Each User's Answers"
    ]
   },
   {
@@ -95,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View Cumulative Data"
+    "### View Cumulative Data"
    ]
   },
   {
@@ -111,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyze Data"
+    "### Analyze Data"
    ]
   },
   {
@@ -128,7 +146,7 @@
    "metadata": {},
    "source": [
     "## Be Creative!\n",
-    "Don't limit yourself to a simple Q&A. Feel free to explore sentiment analysis by determining whether a user's input is positive or negative. (Remember the positive and negative word lists from Lab 1)"
+    "Don't limit yourself to a simple Q&A. Feel free to explore things like the sentiment analysis that we did in Lab 1 by determining whether a user's input is positive or negative (remember the positive and negative word lists)."
    ]
   }
  ],
