updating the number of questions

--- a/milestone_1/milestone_1.ipynb
+++ b/milestone_1/milestone_1.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "## Requirements\n",
     "Your submission should include the following:\n",
-    "- A Chatbot that asks the user a series of at least five questions.\n",
+    "- A Chatbot that asks three users a series of at least three questions.\n",
     "- Your chatbot should store the user's responses in a data structure, preferably a Pandas DataFrame, so that it can present a graphical analysis of the responses.\n",
     "- Your chatbot should provide at least one visualization, such as a vertical bar chart, that provides a basic summary and analysis of the user input."
    ]
